图片模块：用户推荐-优化,优化使用配置加载分类和标签权重，查询使用枚举不写死